--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <body>
     <h1>Dynamic Quote Generator</h1>
     <div id="quoteDisplay"></div>
-    <button id="newQuote">Show New Quote</button>
+    <button id="newQuote" class="btn show-quoteBtn">Show New Quote</button>
+
+    <div class="new-quote">
+        <input type="text" id="newQuoteText" placeholder="Enter a new quote" />
+        <input type="text" id="newQuoteText" placeholder="Enter quote category" />
+        <button onclick="addQuote()" class="btn add-qouteBtn">Add Quote</button>
+    </div>
 </body>
 </html>
