--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Dynamic Quote Generator</h1>
-    <div id="quoteDisplay"></div>
+    <div id="quoteDisplay" class="newQuoteContainer"></div>
     <button id="newQuote" class="btn show-quoteBtn">Show New Quote</button>
 
     <div class="new-quote">
