Create AddQuote function

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -14,7 +14,7 @@
 
     <div class="new-quote">
         <input type="text" id="newQuoteText" placeholder="Enter a new quote" />
-        <input type="text" id="newQuoteText" placeholder="Enter quote category" />
+        <input type="text" id="newQuoteCategory" placeholder="Enter quote category" />
         <button onclick="addQuote()" class="btn add-qouteBtn">Add Quote</button>
     </div>
 </body>
