--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -13,6 +13,7 @@
     <button id="newQuote" class="btn show-quoteBtn">Show New Quote</button>
 
     <div class="new-quote">
+        <h2>Add Your Own Quote</h2>
         <input type="text" id="newQuoteText" placeholder="Enter a new quote" />
         <input type="text" id="newQuoteCategory" placeholder="Enter quote category" />
         <button onclick="addQuote()" class="btn add-qouteBtn">Add Quote</button>
