Added export btn to index file

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -11,6 +11,7 @@
     <h1>Dynamic Quote Generator</h1>
     <div id="quoteDisplay" class="newQuoteContainer"></div>
     <button id="newQuote" class="btn show-quoteBtn">Show New Quote</button>
+    <button class="btn exportBtn">Export Quotes</button>
 
     <div class="new-quote">
         <h2>Add Your Own Quote</h2>
