Style quote display element

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Dynamic Quote Generator</h1>
-    <div id="quoteDisplay" class="newQuoteContainer"></div>
+    <div id="quoteDisplay" class="newQuoteContainer">Click the Yellow Button below to generate Dynamic Quote (HERE!)</div>
     <button id="newQuote" class="btn show-quoteBtn">Show New Quote</button>
     <button class="btn exportBtn">Export Quotes</button>
 
