--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -9,12 +9,18 @@
 </head>
 <body>
     <h1>Dynamic Quote Generator</h1>
-    <div id="quoteDisplay" class="newQuoteContainer">Click the Yellow Button below to generate Dynamic Quote (HERE!)</div>
+    <div id="quoteDisplay" class="newQuoteContainer">Select your favourite category below, and generate Dynamic Quote (HERE!)</div>
+   <select id="categoryFilter" onchange="filterQuotes()">
+    <option value="" disabled selected>Select your category</option>
+    <option value="all">All Categories</option>
+    <option value="all">Global</option>
+    <option value="all">Local</option>
+  </select>
     <button id="newQuote" class="btn show-quoteBtn">Show New Quote</button>
     <button class="btn exportBtn">Export Quotes</button>
 
     <div class="new-quote">
-        <h2>Add Your Own Quote</h2>
+        <h2>Add Your Own Quote and Category</h2>
         <input type="text" id="newQuoteText" placeholder="Enter a new quote" />
         <input type="text" id="newQuoteCategory" placeholder="Enter quote category" />
         <button onclick="addQuote()" class="btn add-qouteBtn">Add Quote</button>
